errors
make bshipserver
make[1]: Entering directory '/home/adams/cs330/battleship'
g++ -c -I ../tools bshipserver.cc
bshipserver.cc: In function ‘void handlePlayerRequest(int, Socket*)’:
bshipserver.cc:121:16: error: ‘struct PlayerResponse’ has no member named ‘turn’
  121 |       response.turn = gameLogic.getTurn();
      |                ^~~~
bshipserver.cc:121:33: error: ‘class GameLogic’ has no member named ‘getTurn’
  121 |       response.turn = gameLogic.getTurn();
      |                                 ^~~~~~~
bshipserver.cc:122:16: error: ‘struct PlayerResponse’ has no member named ‘numShipsPlayer1’
  122 |       response.numShipsPlayer1 = gameLogic.numShips(1);
      |                ^~~~~~~~~~~~~~~
bshipserver.cc:123:16: error: ‘struct PlayerResponse’ has no member named ‘numShipsPlayer2’
  123 |       response.numShipsPlayer2 = gameLogic.numShips(2);
      |                ^~~~~~~~~~~~~~~
make[1]: *** [Makefile:9: bshipserver.o] Error 1
make[1]: Leaving directory '/home/adams/cs330/battleship'
make: *** [Makefile:2: app] Error 2
